content/classes/2.1/PostProcess.md
---
ID_PAGE: 25278
PG_TITLE: PostProcess
PG_VERSION: 2.1
TAGS:
    - PostProcess
---

Postprocesses allow you to create 2D effects on top of your scene.

A postprocess is linked to a camera and can be part of a chain of postprocesss where each postprocess use the result of the previous one as input for its own processing.

A tutorial about post process can be found [here](http://doc.babylonjs.com/tutorials/How_to_use_PostProcesses)
##new [PostProcess](/classes/PostProcess)(name, fragmentUrl, parameters, samplers, ratio, camera, samplingMode, engine, reusable, defines)




The Postprocess constructor






####Parameters
 | Name | Type | Description
---|---|---|---
 | name | string | The postprocess name
 | fragmentUrl | string | The URL of .fragment.fx file where you will code the GLSL shader used for every pixel of the screen
 | parameters | string[] | A list of your uniforms parameters
 | samplers | string[] | A list of additionnal samplers
 | ratio | number | The size of the postprocess (0.5 means that your postprocess will have a width = canvas.width * 0.5 and a height = canvas.height * 0.5)
 | camera | [Camera](/classes/Camera) | The scene camera linked to this post process
optional | samplingMode | number | [Texture](/classes/Texture).NEAREST_SAMPLINGMODE, [Texture](/classes/Texture).BILINEAR_SAMPLINGMODE or [Texture](/classes/Texture).TRILINEAR_SAMPLINGMODE
optional | engine | [Engine](/classes/Engine) | The engine to attach the postprocess.
optional | reusable | boolean | Indicates if the postprocess can be reused multiple times on the same camera
optional | defines | string | 
---

##Members

###name : string








###onApply : (effect: [Effect](/classes/Effect)) =&gt; void





 [Action](/classes/Action) to execute just before the postprocess is applied




###onBeforeRender : (effect: [Effect](/classes/Effect)) =&gt; void





 [Action](/classes/Action) to execute just before the postprocess is rendered




###onSizeChanged : () =&gt; void





 [Action](/classes/Action) to execute just before the postprocess' size is changed




###onActivate : (camera: [Camera](/classes/Camera)) =&gt; void





 [Action](/classes/Action) to execute just before the postprocess is activated




###width : number





default : -1




###height : number





default : -1




###renderTargetSamplingMode : number





default : [Texture](/classes/Texture).NEAREST_SAMPLINGMODE

Other possible values : [Texture](/classes/Texture).BILINEAR_SAMPLINGMODE, [Texture](/classes/Texture).TRILINEAR_SAMPLINGMODE













###clearColor : [Color4](/classes/Color4)




##Methods

###isReusable() &rarr; boolean
Tests if the Postprocess is set to reusable








###activate(camera, sourceTexture) &rarr; void
Activates this postprocess to the given camera







####Parameters
 | Name | Type | Description
---|---|---|---
 | camera | [Camera](/classes/Camera) | default : this camera. The camera to apply the postprocess
optional | sourceTexture | WebGLTexture | Optional textures to add
---

###apply() &rarr; [Effect](/classes/Effect)
Applies this postprocess








###dispose(camera) &rarr; void

####Parameters
 | Name | Type | Description
---|---|---|---
optional | camera | [Camera](/classes/Camera) | The given camera
---
